# Nexus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Notes.txt  README.md  clang-format  config  cppcheck_report.txt  graph_legend.html  graphics stream state.txt  index.html  meshlet stream state.txt  navtreedata.js  rounded-rect.fs  rounded-rect.vs
Application/: CMakeLists.txt  EntryPoint.cpp
Application/Resources/Shaders/: Basic.shader
Demo/: CMakeLists.txt  imgui.ini  main.cpp  shader.glsl  shaders.glsl  shaders.hlsl  vulkan_shader.glsl
Demo/Demos/: CameraDemo.h  CameraDemo.hpp  ClearScreenDemo.h  Demo.h  Demo.hpp  Demo3D.h  Demo3D.hpp  HelloTriangle.h  HelloTriangle.hpp  HelloTriangleIndexed.h  HelloTriangleIndexed.hpp  Lighting.h  Lighting.hpp  Texturing.h  Texturing.hpp  UniformBufferDemo.h  UniformBufferDemo.hpp
Demo/Resources/Shaders/: hello_triangle.glsl  lighting.glsl  models.glsl
Editor/: CMakeLists.txt  Editor.h  Editor.hpp  EntryPoint.cpp
Editor/Resources/Shaders/: shader.glsl
Editor/UI/: AboutPanel.h  AboutPanel.hpp  InspectorPanel.h  LogPanel.h  NewProjectPanel.h  NewProjectPanel.hpp  NewScenePanel.h  NewScenePanel.hpp  Panel.h  ProjectHierarchyPanel.h  SceneHierarchyPanel.h  SettingsPanel.h  ShaderViewerPanel.h  ShaderViewerPanel.hpp  ViewportPanel.h  ViewportPanel.hpp
NexusEngine/: CMakeLists.txt  Docs.h  NexusEngine.h  NexusEngine.hpp
NexusEngine/Components/: Camera.h  Sprite.h
NexusEngine/Core/: Application.cpp  Application.h  Application.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  Core.h  EntryPoint.h  Memory.h  Point.h  Renderer.cpp  Renderer.h  Runtime.cpp  Runtime.h  Runtime.hpp  Size.h  Time.h  Vertex.cpp  Vertex.h  Vertex.hpp  Window.cpp  Window.h  Window.hpp  nxpch.cpp  nxpch.h
NexusEngine/Core/Audio/: AudioBuffer.h  AudioDevice.h  AudioDevice.hpp  AudioSource.h  AudioSource.hpp
NexusEngine/Core/Events/: Event.h  EventHandler.h  EventHandler.hpp
NexusEngine/Core/Graphics/: Buffer.h  Buffer.hpp  Color.h  CommandList.h  CommandList.hpp  DepthFormat.h  Framebuffer.h  Framebuffer.hpp  GraphicsAPI.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDevice.hpp  ImGuiRenderer.cpp  IndexBuffer.h  Mesh.h  Mesh.hpp  MeshFactory.cpp  MeshFactory.h  MeshFactory.hpp  Model.hpp  Pipeline.h  Pipeline.hpp  Rectangle.h  Shader.cpp  Shader.h  Shader.hpp  ShaderDataType.cpp  ShaderDataType.h  ShaderGenerator.cpp  ShaderGenerator.h  Swapchain.h  Texture.h  TextureFormat.h  VertexBuffer.h  Viewport.h
NexusEngine/Core/Input/: Gamepad.cpp  Gamepad.h  Gamepad.hpp  Input.cpp  Input.h  Input.hpp  InputState.cpp  InputState.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
NexusEngine/Core/Logging/: Log.cpp  Log.h
NexusEngine/Core/Networking/: Socket.cpp  Socket.h
NexusEngine/Core/Utils/: FileDialogs.cpp  FileDialogs.h  FileSystem.cpp  FileSystem.h  ShaderUtils.h
NexusEngine/Data/: JsonSerializer.h  Serializer.h
NexusEngine/Input/: Input.h
NexusEngine/Logging/: Log.h
NexusEngine/Platform/DX11/: BufferDX11.cpp  BufferDX11.h  BufferDX11.hpp  CommandListDX11.cpp  CommandListDX11.h  CommandListDX11.hpp  DX11.hpp  FramebufferDX11.cpp  FramebufferDX11.h  GraphicsDeviceDX11.cpp  GraphicsDeviceDX11.h  GraphicsDeviceDX11.hpp  PipelineDX11.cpp  PipelineDX11.h  PipelineDX11.hpp  ShaderDX11.cpp  ShaderDX11.h  ShaderDX11.hpp  TextureDX11.cpp  TextureDX11.h
NexusEngine/Platform/OpenAL/: AudioBufferOpenAL.cpp  AudioBufferOpenAL.h  AudioDeviceOpenAL.cpp  AudioDeviceOpenAL.h  AudioSourceOpenAL.cpp  AudioSourceOpenAL.h  OpenAL.h
NexusEngine/Platform/OpenGL/: BufferOpenGL.cpp  BufferOpenGL.h  BufferOpenGL.hpp  CommandListOpenGL.cpp  CommandListOpenGL.h  CommandListOpenGL.hpp  FramebufferOpenGL.cpp  FramebufferOpenGL.h  GL.cpp  GL.h  GraphicsDeviceOpenGL.cpp  GraphicsDeviceOpenGL.h  GraphicsDeviceOpenGL.hpp  IndexBufferOpenGL.h  PipelineOpenGL.cpp  PipelineOpenGL.h  PipelineOpenGL.hpp  ShaderOpenGL.cpp  ShaderOpenGL.h  ShaderOpenGL.hpp  SwapchainOpenGL.h  TextureOpenGL.cpp  TextureOpenGL.h  VertexBufferOpenGL.h
NexusEngine/Platform/Vulkan/: GraphicsDeviceVk.cpp  GraphicsDeviceVk.h  PipelineBuilder.cpp  PipelineBuilder.h
NexusEngine/Runtime/: Camera.h  Camera.hpp  Project.cpp  Project.h  Project.hpp  Scene.cpp  Scene.h
NexusEngine/Runtime/ECS/: ComponentRegistry.cpp  ComponentRegistry.h  Components.cpp  Components.h  Components.hpp  Entity.h  Entity.hpp
Source/Demo/: CMakeLists.txt  main.cpp
Source/Demo/Demos/: AudioDemo.hpp  BatchingDemo.hpp  CameraDemo.hpp  ClearScreenDemo.hpp  ClippingAndTriangulationDemo.hpp  Demo.hpp  Demo3D.hpp  FramebufferDemo.hpp  HelloTriangle.hpp  HelloTriangleIndexed.hpp  InstancingDemo.hpp  Lighting.hpp  MipmapDemo.hpp  Models.hpp  PythonDemo.hpp  Splines.hpp  TextureReadTest.hpp  Texturing.hpp  TimingDemo.hpp  UniformBufferDemo.hpp
Source/Editor/: CMakeLists.txt  Editor.hpp  EntryPoint.cpp  main.cpp
Source/Editor/UI/: AboutPanel.hpp  Defines.hpp  InspectorPanel.hpp  Layout.cpp  Layout.hpp  LogPanel.hpp  NewProjectPanel.hpp  Panel.hpp  ProjectHierarchyPanel.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp  SceneHierarchyPanel.hpp  SceneViewport.cpp  SceneViewport.hpp  ShaderViewerPanel.hpp
Source/NexusEngine/: CMakeLists.txt  NexusEngine.hpp
Source/NexusEngine/Core/: Application.cpp  Application.hpp  AssetManager.hpp  Renderer.hpp  Vertex.cpp  Vertex.hpp  Window.hpp
Source/NexusEngine/Nexus/: Application.cpp  Application.hpp  ApplicationSpecification.hpp  AssetManager.cpp  AssetManager.hpp  EntryPoint.hpp  Monitor.hpp  Point.hpp  Renderer.cpp  Renderer.hpp  Runtime.cpp  Runtime.hpp  Types.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp  nxpch.hpp
Source/Sandbox/: CMakeLists.txt  main.cpp
Source/Test/: .main.cpp.swp  CMakeLists.txt  main.cpp
src/Demo/: CMakeLists.txt
src/Editor/: CMakeLists.txt  Editor.hpp  EditorProperties.hpp  ImportAssetPanel.hpp  ImporterPanel.hpp  InspectorPanel.hpp  Panel.hpp  ProjectViewPanel.hpp  SceneViewPanel.hpp  TestComp.hpp  main.cpp
src/Nexus/: CMakeLists.txt
src/Sandbox/: CMakeLists.txt  main.cpp
src/Tests/: CMakeLists.txt
(+1009 files in other folders)
